Fix table design on safari and mobiles

--- a/docs/src/main/asciidoc/stylesheet/config.css
+++ b/docs/src/main/asciidoc/stylesheet/config.css
@@ -1,6 +1,7 @@
 table.configuration-reference.tableblock {
   border-collapse: separate;
   border-spacing: 1px;
+  border: none;
 }
 
 table.configuration-reference.tableblock thead th.tableblock {
@@ -21,7 +22,6 @@ table.configuration-reference.tableblock tbody tr th {
   border: none;
   border-bottom: 1px solid #4695eb;
   vertical-align: bottom;
-  color: white;
 }
 
 table.configuration-reference.tableblock tbody tr:first-child th {
@@ -37,6 +37,7 @@ table.configuration-reference.tableblock tbody tr td:nth-child(3) {
 table.configuration-reference.tableblock tbody tr th:nth-child(2) p,
 table.configuration-reference.tableblock tbody tr th:nth-child(3) p {
   font-weight: normal;
+  color: black;
 }
 
 table.configuration-reference.tableblock tbody tr th p {
@@ -45,6 +46,7 @@ table.configuration-reference.tableblock tbody tr th p {
 
 table.configuration-reference.tableblock tbody tr td {
   padding-left: 30px;
+  border: none;
 }
 
 table.configuration-reference.tableblock tbody tr td > .content > .paragraph .icon {
@@ -127,7 +129,6 @@ input#config-search-0 {
 
 input#config-search-0 {
   color: color(#4695eb a(0.8));
-  text-transform: uppercase;
   letter-spacing: 1.5px;
 }
 
@@ -153,4 +154,3 @@ table.configuration-reference.tableblock .description-decoration i {
   font-size: 0.7rem;
   color: #4695eb;
 }
-
